fix jumping button

--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,7 @@
   display: flex;
   align-items: flex-start;
 }
+
+.MuiIconButton-root {
+  align-self: baseline;
+}
